# timshee

./: .env  .env.copy  .gitignore  README.md  certs.yaml  docker-compose.yaml  docker-compose.yml.old  int.docker-compose.yaml  preprod.docker-compose.yml  preprod.start-project.sh  prod.docker-compose.yml  prod.images.docker-compose.yml  prod.images.start-project.sh  prod.start-project.sh  pytest.ini  renew_certs.sh  start-project.sh  template.html  traefik.yaml  unstable.creator.sh  unstable.docker-compose.yml  unstable.images.docker-compose.traefik.yml  unstable.images.docker-compose.yml  unstable.images.start-project.sh  unstable.start-project.sh
backend/: auth.json  entrypoint.py  manage.py  prod.Dockerfile  prod.Dockerfile.old  pyproject.toml  pytest.ini  requirements.txt  unstable.Dockerfile
backend/auth/: serializers.py  services.py  tests.py  urls.py  views.py
backend/cart/: admin.py  models.py  serializers.py
backend/cart/migrations/: 0001_initial.py
backend/integration/: auth_tests.py  tests.py
backend/order/: serializers.py  services.py  strict_serializers.py  tests.py
backend/payment/: payment_logic.py  urls.py  views.py
backend/store/: filters.py  serializers.py  strict_serializers.py
backend/store/migrations/: 0003_alter_color_options_alter_size_options.py  0005_alter_type_category.py  0007_currencymultiplication.py  0008_item_add_info.py
backend/stuff/: apps.py  serializers.py  stuff_logic.py  urls.py  views.py
backend/timshee/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: models.py  service.py
bot/: bot.py
(+978 files in other folders)
