[project]
name = "backend"
version = "0.0.1"
description = "\"Updated backend for timshee.ru\""
authors = [
    {name = "pavelbeard", email = "pavelborodin1995@gmail.com"},
]
dependencies = [
    "django==5.2",
    "djangorestframework==3.16.0",
    "shortuuid==1.0.13",
    "gunicorn==23.0.0",
    "django-environ>=0.12.0",
    "dj-rest-auth>=7.0.1",
    "djangorestframework-simplejwt>=5.5.0",
    "django-allauth>=65.7.0",
    "requests>=2.32.3",
    "pytest-django>=4.11.1",
    "pytest>=8.3.5",
]
requires-python = "==3.13.1"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations -v 3"
check_db = "python manage.py check --database default"
prod = "gunicorn timshee.wsgi:application --bind 0.0.0.0:8111"